--- a/src/components/Navigation/MainNavigation.module.css
+++ b/src/components/Navigation/MainNavigation.module.css
@@ -49,3 +49,49 @@
 .active {
   text-decoration: revert !important;
 }
+.hamburgerNav {
+  display: none;
+}
+@media screen and (max-width: 600px) {
+  .navBar {
+    display: none;
+  }
+  .hamburgerOpen {
+    display: block;
+  }
+  .hamburgerNav {
+    display: block;
+  }
+  .hamburgerIcon {
+    font-size: 35px;
+  }
+}
+
+.menu-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: red;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.menu-container ul li {
+  list-style: none;
+  padding: 10px;
+}
+.menu-container a {
+  text-decoration: none;
+  color: white;
+  padding: 20px;
+  text-transform: uppercase;
+}
+.menu-container .closeBtn {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
