--- a/src/components/Navigation/MainNavigation.module.css
+++ b/src/components/Navigation/MainNavigation.module.css
@@ -13,23 +13,6 @@
   text-align: center;
 }
 
-.navBar {
-  display: flex;
-  margin: 10px 0px 15px 0px;
-}
-.navBar li {
-  list-style: none;
-}
-.navBar a {
-  font-size: 15px;
-  text-decoration: inherit;
-  color: white;
-  margin-right: 0.7rem;
-  margin-left: 0.7rem;
-}
-.navBar a:hover {
-  text-decoration: revert;
-}
 .logo {
   color: inherit;
   text-decoration: inherit;
@@ -49,21 +32,31 @@
 .active {
   text-decoration: revert !important;
 }
-.hamburgerNav {
+.top-menu nav ul {
+  display: flex;
+  margin: 10px 0px 15px 0px;
+  list-style: none;
+}
+.top-menu nav ul a {
+  font-size: 15px;
+  text-decoration: inherit;
+  color: white;
+  margin-right: 0.7rem;
+  margin-left: 0.7rem;
+}
+
+.hamburgerIcon {
   display: none;
 }
+
 @media screen and (max-width: 600px) {
-  .navBar {
+  .top-menu {
     display: none;
   }
-  .hamburgerOpen {
-    display: block;
-  }
-  .hamburgerNav {
-    display: block;
-  }
+
   .hamburgerIcon {
     font-size: 35px;
+    display: block;
   }
 }
 
