--- a/src/components/Form/Contact.module.css
+++ b/src/components/Form/Contact.module.css
@@ -19,3 +19,8 @@
 .headerContact {
   margin-bottom: 15px;
 }
+@media screen and (max-width: 600px) {
+  .containerContact {
+    margin-bottom: 70px;
+  }
+}
