--- a/src/components/ErrorModal/ErrorModal.module.css
+++ b/src/components/ErrorModal/ErrorModal.module.css
@@ -1,41 +1,13 @@
-.backdrop {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  z-index: 20;
-  background-color: rgba(0, 0, 0, 0.75);
-}
-.modal {
-  position: absolute;
-  width: 280px;
-  height: 210px;
-  top: 95px;
-  left: 60px;
-  background: #fff;
-  border-radius: 3px;
-  box-shadow: 4px 8px 12px 0 rgba(0, 0, 0, 0.4);
-  text-align: center;
-  overflow: hidden;
-  animation: show-modal 0.7s ease-in-out;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
 .title {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  display: block;
   font-size: 18px;
   line-height: 24px;
   font-weight: 400;
-  margin: 14px 0 5px 0;
+  margin: 1px 0 5px 0;
 }
 
-.modal p {
-  font-size: 18px;
+.title p {
+  font-size: 14px;
   font-weight: 300;
   line-height: 19px;
   margin: 0;
@@ -48,6 +20,7 @@
   bottom: 0;
   left: 0;
   right: 0;
+  background: #f65656;
   color: #fff;
   line-height: 40px;
   font-size: 14px;
