add main page background

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -6,7 +6,7 @@
   align-items: center;
   color: white;
   font-family: sans-serif;
-  background-color: purple;
+  background-color: #194869;
   position: fixed;
   bottom: 0;
 }
