--- a/src/components/Navigation/MainNavigation.module.css
+++ b/src/components/Navigation/MainNavigation.module.css
@@ -8,7 +8,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: purple;
+  background-color: #194869;
   flex-direction: column;
   text-align: center;
 }
@@ -66,7 +66,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: red;
+  background-color: #194869;
   z-index: 1;
   display: flex;
   flex-direction: column;
