--- a/src/components/ErrorModal/Modal.module.css
+++ b/src/components/ErrorModal/Modal.module.css
@@ -13,7 +13,7 @@
   align-items: center;
   justify-content: center;
   text-align: center;
-  position: absolute;
+  position: fixed;
   width: 300px;
   height: 210px;
   top: 40vh;
