image projects animation

--- a/src/pages/Home/HomePage.module.css
+++ b/src/pages/Home/HomePage.module.css
@@ -11,10 +11,12 @@
 .imageWrapper img {
   width: 90%;
   margin-top: 10px;
+  overflow: hidden;
 }
 .projectsWrapper {
   margin-top: 280px;
 }
+
 @media screen and (max-width: 800px) {
   .backgroundContainer {
     background-color: #194869;
