--- a/src/components/Project/ProjectsCard.module.css
+++ b/src/components/Project/ProjectsCard.module.css
@@ -3,13 +3,20 @@
   object-fit: contain;
   max-height: 50vh;
 }
+.imageWrapper {
+  overflow: hidden;
+}
 
+.imageWrapper:hover img {
+  transform: scale(1.2);
+}
 .buttonDiscover {
   border-radius: 10px;
   padding: 0.7em 1.4em;
   border: 0.5px solid;
   margin-top: 20px;
   letter-spacing: 0.2rem;
+  cursor: pointer;
 }
 .buttonDiscover a {
   text-decoration: none;
