--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -31,10 +31,15 @@
   text-align: center;
 }
 .wrapperButton button {
-  padding: 10px 20px;
+  padding: 10px 50px;
   border-radius: 8px;
   cursor: pointer;
   letter-spacing: 0.2rem;
   text-transform: uppercase;
   border: 1px solid;
+  background-color: transparent;
+}
+input:focus + label {
+  position: relative;
+  top: -60px;
 }
