--- a/src/components/Navigation/MainNavigation.module.css
+++ b/src/components/Navigation/MainNavigation.module.css
@@ -95,3 +95,14 @@
   top: 0;
   right: 0;
 }
+.fade-in-text {
+  animation: fadeIn 1.5s;
+}
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
