--- a/src/components/Project/ProjectsCard.module.css
+++ b/src/components/Project/ProjectsCard.module.css
@@ -42,6 +42,14 @@
 .item.right {
   flex-direction: row;
 }
+@media screen and (max-width: 1200px) {
+  .imageWrapper {
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+  }
+}
+
 @media screen and (max-width: 800px) {
   .descriptionWrapper {
     width: 100%;
@@ -49,5 +57,8 @@
   }
   .buttonDiscover {
     margin-bottom: 4vh;
+  }
+  .imageWrapper {
+    margin-top: 0px;
   }
 }
