--- a/src/components/Project/ProjectsCard.module.css
+++ b/src/components/Project/ProjectsCard.module.css
@@ -13,14 +13,12 @@
 .buttonDiscover {
   border-radius: 10px;
   padding: 0.7em 1.4em;
-  border: 0.5px solid;
+  border: 0.5px solid black;
   margin-top: 20px;
   letter-spacing: 0.2rem;
   cursor: pointer;
-}
-.buttonDiscover a {
   text-decoration: none;
-  color: inherit;
+  color: black;
 }
 
 .descriptionWrapper {
