--- a/src/pages/Projects/ProjectsDetail.module.css
+++ b/src/pages/Projects/ProjectsDetail.module.css
@@ -6,3 +6,9 @@
   height: 100%;
   object-fit: cover;
 }
+.imageWrapper {
+  overflow: hidden;
+}
+.imageWrapper img:hover {
+  transform: scale(1.2);
+}
