--- a/src/pages/Projects/ProjectsDetail.module.css
+++ b/src/pages/Projects/ProjectsDetail.module.css
@@ -9,7 +9,12 @@
 }
 .imageWrapper {
   overflow: hidden;
+  margin: 10px;
 }
 .imageWrapper img:hover {
   transform: scale(1.2);
+}
+.lightGallery {
+  display: flex;
+  flex-wrap: wrap;
 }
