add default fonts

--- a/src/App.css
+++ b/src/App.css
@@ -113,5 +113,5 @@
     url("./assets/fonts/CaviarDreams_Italic.ttf") format("truetype");
 }
 * {
-  font-family: "CaviarDreamsItalic";
+  font-family: "LatoRegular";
 }
