--- a/src/pages/About/About.module.css
+++ b/src/pages/About/About.module.css
@@ -1,5 +1,5 @@
 .page-container {
   min-height: 89vh;
   display: flex;
-  flex-direction: column;
+  background: url("https://dvqlxo2m2q99q.cloudfront.net/000_clients/3043725/page/k20156fnrUJN0Z1k.jpg");
 }
